[project]
name = "ultrasound-heating-sim"
version = "0.1.0"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
